--- a/Agilefreaks/Views/Shared/_Layout.cshtml
+++ b/Agilefreaks/Views/Shared/_Layout.cshtml
@@ -1,10 +1,5 @@
 ﻿<!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!-->
-<html class="no-js">
-<!--<![endif]-->
+<html>
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -13,10 +8,19 @@
 
     <link href='http://fonts.googleapis.com/css?family=PT+Sans:700' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
-    <link href='apple-touch-icon.png' rel='apple-touch-icon'>
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <link href='~/Content/apple-touch-icon.png' rel='apple-touch-icon'>
+    <link rel="shortcut icon" href="~/Content/favicon.ico" type="image/x-icon" />
     <!--[if lt IE 9]>
-        <script src="js/vendor/html5-3.6-respond-1.1.0.min.js"></script>
+        <link rel="stylesheet" href="~/Content/ie8.css">
+    <![endif]-->
+    <!--[if IE 7]>
+        <link rel="stylesheet" href="~/Content/ie7.css">
+    <![endif]-->
+    <!--[if IE 9]>
+        <link rel="stylesheet" href="~/Content/ie9.css">
+    <![endif]-->
+    <!--[if lt IE 9]>
+        <script src="~/Scripts/html5-3.6-respond-1.1.0.min.js"></script>
     <![endif]-->
 
     <title>@ViewBag.Title</title>
@@ -25,6 +29,9 @@
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
+    <!--[if lt IE 7]>
+        <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
+    <![endif]-->
     @RenderBody()
 
     @Scripts.Render("~/bundles/jquery")
