--- a/Agilefreaks/Views/Home/_AboutUs.cshtml
+++ b/Agilefreaks/Views/Home/_AboutUs.cshtml
@@ -38,12 +38,18 @@
                 <h4>Alexandru Calinoiu</h4>
                 <span class="job-name">Founder/Programmer</span>
                 <div>
-                    <a href="#" class="git-icon" title="github"></a>
-                    <a href="#" class="linkedin-icon" title="linkedin"></a>
-                    <a href="#" class="twitter-icon" title="twitter"></a>
+                    <a href="https://github.com/balauru" class="git-icon" title="github"></a>
+                    <a href="http://www.linkedin.com/in/alexandrucalinoiu" class="linkedin-icon" title="linkedin"></a>
+                    <a href="https://twitter.com/CalinBalauru" class="twitter-icon" title="twitter"></a>
                 </div>
-                <p>Is the software craftsman behind PhotoStairway. He gave up working in big corporations in 2010 when he co-founded Agile Freaks.</p>
-                <p>He’s an optimistic geek who is working his way to becoming a successful entrepreneur even though he says he doesn’t like the word itself.</p>
+                <p>
+                    I've been programming for the age of 12 started with a 
+                    <a href="http://ro.wikipedia.org/wiki/HC#HC_85" target="_blank">HC 85</a> 
+                    and a tape recorder to load 
+                    <a href="http://en.wikipedia.org/wiki/BASIC" target="_blank">Basic</a> games
+                </p>
+                <p>Since then in the last 8 years I've worked on a couple of national and international companies and in 2010 I've founded my own outsourcing studio.</p>
+                <p>Passionate about programming (duh!), violin, biking, rock climbing, meditation and a vegetarian wannabe.</p>
             </div>
             <div class="team-member clearfix">
                 <img src="~/Content/img/NistorAdrian.png" class="team-img" alt="" />
