--- a/Agilefreaks/Views/Home/_AboutUs.cshtml
+++ b/Agilefreaks/Views/Home/_AboutUs.cshtml
@@ -43,7 +43,7 @@
                     <a href="https://twitter.com/CalinBalauru" class="twitter-icon" title="twitter"></a>
                 </div>
                 <p>
-                    I've been programming for the age of 12 started with a 
+                    I've been programming since the age of 12 started with a
                     <a href="http://ro.wikipedia.org/wiki/HC#HC_85" target="_blank">HC 85</a> 
                     and a tape recorder to load 
                     <a href="http://en.wikipedia.org/wiki/BASIC" target="_blank">Basic</a> games
