--- a/Agilefreaks/Views/Home/_AboutUs.cshtml
+++ b/Agilefreaks/Views/Home/_AboutUs.cshtml
@@ -89,15 +89,14 @@
             </div>
             <div class="team-member clearfix">
                 <img src="~/Content/img/DoruParvu.png" class="team-img" alt="" />
-                <h4>Doru Parvu</h4>
-                <span class="job-name">Job title here</span>
+                <h4>Doru Pîrvu</h4>
+                <span class="job-name">Programmer</span>
                 <div>
-                    <a href="#" class="git-icon" title="github"></a>
-                    <a href="#" class="linkedin-icon" title="linkedin"></a>
-                    <a href="#" class="twitter-icon" title="twitter"></a>
+                    <a href="https://github.com/pirvudoru" class="git-icon" title="github"></a>
+                    <a href="https://twitter.com/dorupirvu" class="twitter-icon" title="twitter"></a>
                 </div>
-                <p>Is the software craftsman behind PhotoStairway. He gave up working in big corporations in 2010 when he co-founded Agile Freaks.</p>
-                <p>He’s an optimistic geek who is working his way to becoming a successful entrepreneur even though he says he doesn’t like the word itself.</p>
+                <p>I am a passionate programmer and currently a 3<sup>rd</sup> year student Computer Science at "Lucian Blaga" University from Sibiu.</p>
+                <p>Mostly interested in web technologies and software architecture.</p>
             </div>
             <div class="team-member clearfix">
                 <img src="~/Content/img/member00.png" class="team-img" alt="" />
