fixed spelling mistakes

--- a/Agilefreaks/Views/Home/_AboutUs.cshtml
+++ b/Agilefreaks/Views/Home/_AboutUs.cshtml
@@ -72,14 +72,15 @@
                     <a href="http://ro.linkedin.com/pub/cristian-badila/5a/125/630/" class="linkedin-icon" title="linkedin"></a>
                 </div>
                 <p>
-                    I am first and foremost a science/technology enthusiast and have been since I read my frist science-fiction book, so when I got my first computer I instantly knew that I wanted to be a
-                    programmer (even though I didn't actually understood what it ment).                     
+                    I am first and foremost a science/technology enthusiast and have been since I read my first science-fiction book, so when I got my first computer I instantly knew that 
+                    I wanted to be a programmer (even though I didn't actually understood what it meant).
                 </p>
                 <p>
-                    With that in mind I went on to take courses at schools specialised in teaching programming/technology and finnaly got to start working as a programmer in 2009.
+                    With that in mind I went on to take courses at schools specialized in teaching programming/technology and finally got to start working as a programmer in 2009.
                 </p>
                 <p>
-                    After an initial first year in which I tried to find my place in bigger companies I realised that the best fit for me was a smaller but highly pasionate team (Agilefreaks) where I've been working sice 2011.
+                    After an initial first year in which I tried to find my place in bigger companies I realized that the best fit for me was a smaller but highly passionate team (AgileFreaks) 
+                    where I've been working since 2011.
                 </p>
             </div>
             <div class="team-member clearfix">
