Added Adrian Nistor bio

--- a/Agilefreaks/Views/Home/_AboutUs.cshtml
+++ b/Agilefreaks/Views/Home/_AboutUs.cshtml
@@ -54,14 +54,15 @@
             <div class="team-member clearfix">
                 <img src="~/Content/img/NistorAdrian.png" class="team-img" alt="" />
                 <h4>Adrian Nistor</h4>
-                <span class="job-name">Job title here</span>
+                <span class="job-name">Co-Founder & Stuff</span>
                 <div>
-                    <a href="#" class="git-icon" title="github"></a>
-                    <a href="#" class="linkedin-icon" title="linkedin"></a>
-                    <a href="#" class="twitter-icon" title="twitter"></a>
+                    <a href="https://github.com/levelboy" class="git-icon" title="github"></a>
+                    <a href="http://ro.linkedin.com/in/nistoradrian" class="linkedin-icon" title="linkedin"></a>
                 </div>
-                <p>Is the software craftsman behind PhotoStairway. He gave up working in big corporations in 2010 when he co-founded Agile Freaks.</p>
-                <p>He’s an optimistic geek who is working his way to becoming a successful entrepreneur even though he says he doesn’t like the word itself.</p>
+                <p>Since I was little I was fascinated with computers and I knew my life is going to revolve around them.
+                Tried different (weird) jobs in my past: desktop publisher, IT specialist, embedded software engineer.</p>
+                <p>I gave up working in big corporations in 2010 when I co-founded AgileFreaks and don't regret it one bit.</p>
+                <p>I think of myself as an optimistic, quiet and self driven person that enjoys the simple things in life.</p>
             </div>
             <div class="team-member clearfix">
                 <img src="~/Content/img/BadilaCristian.png" class="team-img" alt="" />
