--- a/Agilefreaks/Views/Home/_AboutUs.cshtml
+++ b/Agilefreaks/Views/Home/_AboutUs.cshtml
@@ -66,8 +66,8 @@
             </div>
             <div class="team-member clearfix">
                 <img src="~/Content/img/BadilaCristian.png" class="team-img" alt="" />
-                <h4>Cristi</h4>
-                <span class="job-name">Job title here</span>
+                <h4>Cristi Badila</h4>
+                <span class="job-name">Programmer</span>
                 <div>
                     <a href="https://github.com/cristi-badila" class="git-icon" title="github"></a>
                     <a href="http://ro.linkedin.com/pub/cristian-badila/5a/125/630/" class="linkedin-icon" title="linkedin"></a>
@@ -80,21 +80,22 @@
                     With that in mind I went on to take courses at schools specialized in teaching programming/technology and finally got to start working as a programmer in 2009.
                 </p>
                 <p>
-                    After an initial first year in which I tried to find my place in bigger companies I realized that the best fit for me was a smaller but highly passionate team (AgileFreaks) 
+                    After an initial first year in which I tried to find my place in bigger companies I realized that the best fit for me was a smaller but highly passionate team (Agile Freaks) 
                     where I've been working since 2011.
                 </p>
             </div>
             <div class="team-member clearfix">
                 <img src="~/Content/img/IleanaTristiu.png" class="team-img" alt="" />
                 <h4>Ileana Tristiu</h4>
-                <span class="job-name">Job title here</span>
+                <span class="job-name">Programmer</span>
                 <div>
-                    <a href="#" class="git-icon" title="github"></a>
-                    <a href="#" class="linkedin-icon" title="linkedin"></a>
+                    <a href="https://github.com/ileanatristiu" class="git-icon" title="github"></a>
+                    <a href="http://www.linkedin.com/pub/ileana-tristiu/3b/13a/a8b" class="linkedin-icon" title="linkedin"></a>
                     <a href="#" class="twitter-icon" title="twitter"></a>
                 </div>
-                <p>Is the software craftsman behind PhotoStairway. He gave up working in big corporations in 2010 when he co-founded Agile Freaks.</p>
-                <p>He’s an optimistic geek who is working his way to becoming a successful entrepreneur even though he says he doesn’t like the word itself.</p>
+                <p>My first contact with the world of programmers was 10 years ago in high school and since then I have studied to specialize my skils in this area. 
+                    I have started my professional career in December 2011 here, at Agile Freaks.</p>
+                <p>I love nature, music, ski and my job.</p>
             </div>
             <div class="team-member clearfix">
                 <img src="~/Content/img/DoruParvu.png" class="team-img" alt="" />
