Update job position and team quote

--- a/Agilefreaks/Views/Home/_AboutUs.cshtml
+++ b/Agilefreaks/Views/Home/_AboutUs.cshtml
@@ -30,13 +30,13 @@
                 </div>
                 <h3>Our team members</h3>
                 <div class="line"></div>
-                <span class="desc-team">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae.</span>
+                <span class="desc-team">When a team outgrows individual performance and learns team confidence, excellence becomes a reality.</span>
             </div>
             <!-- team members -->
             <div class="team-member clearfix">
                 <img src="~/Content/img/CalinoiuAlexandru.png" class="team-img" alt="" />
                 <h4>Alexandru Calinoiu</h4>
-                <span class="job-name">Founder/Programmer</span>
+                <span class="job-name">Co-Founder & Project Manager</span>
                 <div>
                     <a href="https://github.com/balauru" class="git-icon" title="github"></a>
                     <a href="http://www.linkedin.com/in/alexandrucalinoiu" class="linkedin-icon" title="linkedin"></a>
