Added 'Love for programming' and 'Experience' texts

--- a/Agilefreaks/Views/Home/_AboutUs.cshtml
+++ b/Agilefreaks/Views/Home/_AboutUs.cshtml
@@ -20,11 +20,11 @@
                     <div class="wrap-about-box clearfix">
                         <div class="about-box">
                             <h4><span class="ico-ambition"></span>Ambition</h4>
-                            <p>Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem.</p>
-                            <h4><span class="ico-love"></span>Love for programming</h4>
+                            <p>AgileFreaks was born out of ambition. Before this, we worked on bigger companies. The problem there was that they were making compromises to the people they hired and the quality of work they delivered. We grew tired of this and set out with the mindset of 'no compromise' and people say we're on the good track.</p>
+                            <h4><span class="ico-love"></span>Love for problem solving</h4>
                             <p>Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem.</p>
                             <h4><span class="ico-experience"></span>Experience</h4>
-                            <p>Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem.</p>
+                            <p>We dealt with a high variety of software projects and we carried them out with good communication and professionalism.</p>
                         </div>
                     </div>
                 </div>
