--- a/Agilefreaks/Views/Home/_Features.cshtml
+++ b/Agilefreaks/Views/Home/_Features.cshtml
@@ -1,41 +1,52 @@
-﻿<section id="features">
+﻿<!-- Features -->
+<section id="features">
     <div class="features-wrap">
         <div class="container clearfix">
-            <ul id="featuresTab">
+            <ul class="features-tabs " id="featuresTab">
                 <li class="active"><a href="#customer-features">Customer Features</a></li>
                 <li><a href="#employees-features">Employees Features</a></li>
             </ul>
 
             <div class="tab-content">
+                <!-- Customer Features Content -->
                 <div class="tab-pane fade in active clearfix" id="customer-features">
                     <div class="features-item">
-                        <h3><span class="big-icon-features features-communication"></span>Communication</h3>
+                        <h3>
+                            <img src="~/Content/img/icon-comunication.png" alt="" class="big-icon-features" />Communication</h3>
                         <p>You can always see what’s going on with your product. We will give you access to our internal communication and integration tools so that you know what are we working on and when it’s deployed.</p>
                     </div>
                     <div class="features-item">
-                        <h3><span class="big-icon-features features-debating"></span>Constructive debating</h3>
+                        <h3>
+                            <img src="~/Content/img/icon-constructive.png" alt="" class="big-icon-features" />Constructive debating</h3>
                         <p>You can always see what’s going on with your product. We will give you access to our internal communication and integration tools so that you know what are we working on and when it’s deployed.</p>
                     </div>
                     <div class="features-item">
-                        <h3><span class="big-icon-features features-sincerity"></span>Sincerity</h3>
+                        <h3>
+                            <img src="~/Content/img/icon-sincerity.png" alt="" class="big-icon-features" />Sincerity</h3>
                         <p>You can always see what’s going on with your product. We will give you access to our internal communication and integration tools so that you know what are we working on and when it’s deployed.</p>
                     </div>
                     <div class="features-item">
-                        <h3><span class="big-icon-features features-transparency"></span>Transparency</h3>
+                        <h3>
+                            <img src="~/Content/img/icon-transparency.png" alt="" class="big-icon-features" />Transparency</h3>
                         <p>You can always see what’s going on with your product. We will give you access to our internal communication and integration tools so that you know what are we working on and when it’s deployed.</p>
                     </div>
                     <div class="features-item">
-                        <h3><span class="big-icon-features features-flexibility"></span>Flexibility</h3>
+                        <h3>
+                            <img src="~/Content/img/icon-flexibility.png" alt="" class="big-icon-features" />Flexibility</h3>
                         <p>You can always see what’s going on with your product. We will give you access to our internal communication and integration tools so that you know what are we working on and when it’s deployed.</p>
                     </div>
                     <div class="features-item">
-                        <h3><span class="big-icon-features features-responsibility"></span>Responsibility</h3>
+                        <h3>
+                            <img src="~/Content/img/icon-responsibility.png" alt="" class="big-icon-features" />Responsibility</h3>
                         <p>You can always see what’s going on with your product. We will give you access to our internal communication and integration tools so that you know what are we working on and when it’s deployed.</p>
                     </div>
+
                 </div>
+                <!-- End Customer Features Content -->
                 <div class="tab-pane fade in" id="employees-features">...</div>
             </div>
         </div>
         <div class="shadow-bar-features"></div>
     </div>
 </section>
+<!-- End Features -->
