--- a/Agilefreaks/Views/Home/_Visit.cshtml
+++ b/Agilefreaks/Views/Home/_Visit.cshtml
@@ -1,12 +1,31 @@
-﻿<section class="visit-us">
+﻿<!-- Visit -->
+<section class="visit-us">
     <div class="visit-black-border"></div>
     <div class="visit-white-border-double-up"></div>
     <div class="visit-black-border"></div>
     <div class="container">
         <h2>Work with us for a day</h2>
-        <div class="visit-action"><span class="visit-action-desc">Want to see first hand how the freaks work? </span><a href="#" title="join" class="join-us">Join us for a day of fun</a> </div>
+        <div class="visit-action">
+            <span class="visit-action-desc">Want to see first hand how the freaks work? </span><a href="#join_us" role="button" title="join" class="join-us " data-toggle="modal">Join us for a day of fun</a>
+
+            <div id="join_us" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                    <h3 id="myModalLabel">Modal header</h3>
+                </div>
+                <div class="modal-body">
+                    <p>One fine body…</p>
+                </div>
+                <div class="modal-footer">
+                    <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
+                    <button class="btn btn-primary">Send</button>
+                </div>
+            </div>
+
+        </div>
     </div>
     <div class="visit-white-border-double-up"></div>
     <div class="visit-black-border-double-bottom"></div>
     <div class="visit-white-border"></div>
 </section>
+<!-- End visit -->
