--- a/Agilefreaks/Views/Shared/_Layout.cshtml
+++ b/Agilefreaks/Views/Shared/_Layout.cshtml
@@ -35,6 +35,7 @@
     @RenderBody()
 
     @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/jqueryui")
     @Scripts.Render("~/bundles/main")
     @RenderSection("scripts", required: false)
 </body>
