--- a/Agilefreaks/Views/Home/_Contact.cshtml
+++ b/Agilefreaks/Views/Home/_Contact.cshtml
@@ -1,4 +1,5 @@
-﻿<section id="contact">
+﻿<!-- Contact -->
+<section id="contact">
     <div class="contact-wrap">
         <div class="shadow-contact-top"></div>
         <div class="container">
@@ -10,15 +11,11 @@
             <span class="contact-tagline">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae.</span>
             <div class="clearfix contact-form-wrap">
 
-                <form class="contact-form" method="post">
-                    <div class="input-wrap">
-                        <span class="name-icn"></span>
-                        <input id="name" type="text" name="name" placeholder="Name" />
-                    </div>
-                    <div class="input-wrap input-email">
-                        <span class="email-icn"></span>
-                        <input id="email" type="text" name="email" placeholder="Email address" />
-                    </div>
+                <form class="contact-form" action="" method="post">
+                    <div class="input-wrap input-name"><span class="name-icn"></span>
+                        <input id="name" type="text" name="name" placeholder="Name" /></div>
+                    <div class="input-wrap input-email"><span class="email-icn"></span>
+                        <input id="email" type="text" name="email" placeholder="Email address" /></div>
                     <textarea name="message" id="" placeholder="Type your message..."></textarea>
                     <div class="input-wrap input-submit">
                         <button type="submit" class="get-in-touch">Send </button>
@@ -28,14 +25,10 @@
                 <div class="contact-details">
                     <h4>Contact details</h4>
                     <div class="line-contact-details"></div>
-                    <div class="details-item">
-                        <span>Office:</span>Str. Tg Vinului, nr. 9<br />
-                        Sibiu, Romania, 550191   
-                    </div>
-                    <div class="details-item">
-                        <span>Phone:</span>+40 745 857479<br />
-                        +40 747 074372
-                    </div>
+                    <div class="details-item"><span>Office:</span>Str. Tg Vinului, nr. 9<br />
+                        Sibiu, Romania, 550191    </div>
+                    <div class="details-item"><span>Phone:</span>+40 745 857479<br />
+                        +40 747 074372</div>
                     <div class="details-item"><span>Email:</span>office@agilefreaks.com</div>
                 </div>
             </div>
@@ -43,3 +36,4 @@
         <div class="container-footer"><span>Copyright © 2009-2012 Agile Freaks.</span></div>
     </div>
 </section>
+<!-- End contact -->
