--- a/Agilefreaks/Views/Home/_Header.cshtml
+++ b/Agilefreaks/Views/Home/_Header.cshtml
@@ -1,22 +1,24 @@
-﻿<header class="navbar navbar-fixed-top" id="sticky-navigation-wrap">
-    <div class="border-top"></div>
-    <div class="navbar-inner_">
+﻿<header class="header" id="header">
+    <div class="navbar" id="sticky-navigation-wrap">
+        <div class="border-top"></div>
         <div class="container">
-            <h1><a class="brand" href="#">
+
+            <h1><a class="brand" href="/">
                 <img src="~/Content/img/logo.png" alt="agilefreaks logo"></a></h1>
             <a class="btn btn-navbar collapsed" data-toggle="collapse" data-target=".nav-collapse">
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </a>
-            <div class="nav-collapse collapse" style="height: 0px;">
+            <nav class="nav-collapse collapse" style="height: 0px;">
                 <ul class="nav">
-                    <li class="active"><a href="#features"><span class="menu-icon icon-features"></span>Features</a></li>
+                    <li class="back-top"><a href="#header"><span class="menu-icon icon-top"></span>Top</a></li>
+                    <li><a href="#features"><span class="menu-icon icon-features"></span>Features</a></li>
                     <li><a href="#about"><span class="menu-icon icon-about"></span>About Us</a></li>
                     <li><a href="#contact"><span class="menu-icon icon-contact"></span>Contact</a></li>
                     <li><a href="#blog"><span class="menu-icon icon-blog"></span>Blog</a></li>
                 </ul>
-            </div>
+            </nav>
         </div>
     </div>
 </header>
