--- a/Agilefreaks/Views/Shared/_Layout.cshtml
+++ b/Agilefreaks/Views/Shared/_Layout.cshtml
@@ -37,6 +37,8 @@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/jqueryui")
     @Scripts.Render("~/bundles/main")
+    <script src="~/Scripts/humane/humane.min.js"></script>
+
     @Scripts.Render("~/bundles/jqueryval")
     @RenderSection("scripts", required: false)
 </body>
