--- a/Agilefreaks/Content/Style.css
+++ b/Agilefreaks/Content/Style.css
@@ -660,7 +660,7 @@ textarea:focus, input[type="text"]:focus {
   width: 50%;
   float: left; }
 
-.team-Content/img {
+.team-img {
   float: left;
   margin-right: 20px;
   margin-bottom: 15px; }
@@ -1246,7 +1246,7 @@ textarea {
     height: auto;
     padding-bottom: 5px; }
 
-  .features-item Content/img {
+  .features-item img {
     width: 40px;
     height: 40px;
     margin-right: 10px; }
@@ -1308,10 +1308,10 @@ textarea {
   .right-quote {
     bottom: 20px; }
 
-  .right-quote Content/img, .left-quote Content/img {
+  .right-quote img, .left-quote img {
     width: 80%; } }
 @media (max-width: 479px) {
-  .right-quote Content/img, .left-quote Content/img {
+  .right-quote img, .left-quote img {
     width: 50%; }
 
   .bx-viewport {
@@ -1399,7 +1399,7 @@ textarea {
   .third-row {
     height: auto; } }
 @media (max-width: 479px) {
-  .team-member .team-Content/img {
+  .team-member .team-img {
     width: 110px; }
 
   .about-desc {
