--- a/Agilefreaks/Views/Home/Index.cshtml
+++ b/Agilefreaks/Views/Home/Index.cshtml
@@ -21,7 +21,7 @@
     <div class="desc-top-shadow"></div>
     <div class="desc-top-bar"></div>
     <div class="container">
-        <h2>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae.</h2>
+        <h2>Meet AgileFreaks, one of the leanest, smartest and quickest software development studios in Romania.</h2>
         <span class="line"></span>
         <span class="line"></span>
     </div>
