--- a/Agilefreaks/Views/Home/_AboutUs.cshtml
+++ b/Agilefreaks/Views/Home/_AboutUs.cshtml
@@ -8,16 +8,16 @@
                 <div class="line"></div>
                 <div class="clearfix about-desc-wrap">
                     <div class="about-desc">
-                        <p>We are a small software development studio located in Sibiu, Romania. We started this in 2010 as a two-men company and went through a steady progress since then with both enlarging our team and keeping our clients happy with the work we’ve done. </p>
-                        <p>We value a good atmosphere in the office! To achieve it we choose our team members with great care. This means that all the existing colleagues have a word to say when enlarging the team.</p>
-                        <p>Our goal is to have a team with self-driven, highly motivated people that find good friends in each other. Experience tells us that everything will fall into place from there.</p>
+                        <p>We are a small software development studio located in Sibiu, Romania. We launched in 2010 as a two-men company and went through a steady progress since then with both enlarging our team and keeping our clients happy with the work we’ve done. </p>
+                        <p>We really value a good atmosphere in the office and to achieve it we choose our team members with great care. This means that all the existing colleagues have a word to say when enlarging the team.</p>
+                        <p>Our goal is to have a team with self-driven, highly motivated people that find good friends in each other. Experience tells us that everything will fall into place from then on.</p>
                     </div>
                     <div class="wrap-about-box clearfix">
                         <div class="about-box">
                             <h4><span class="ico-ambition"></span>Ambition</h4>
-                            <p>AgileFreaks was born out of ambition. Before this, we worked on bigger companies. The problem there was that they were making compromises to the people they hired and the quality of work they delivered. We grew tired of this and set out with the mindset of 'no compromise' and people say we're on the good track.</p>
+                            <p>AgileFreaks was born out of ambition. Before starting the company, each of us worked in bigger companies. One of the problems there was that often the companies had to make compromises in regards to the people they hired and the quality of work they delivered. We grew tired of this and set out with the mindset of 'no compromises' and people say we're on the good track.</p>
                             <h4><span class="ico-love"></span>Love for programming</h4>
-                            <p>Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem.</p>
+                            <p>All of our team members must have a real passion for programming. We believe that loving the work that we do will help us deliver products of greater quality.</p>
                             <h4><span class="ico-experience"></span>Experience</h4>
                             <p>We dealt with a high variety of software projects and we carried them out with good communication and professionalism.</p>
                         </div>
@@ -30,7 +30,7 @@
             <!-- team members -->
             <div class="team-member first-row clearfix">
                 
-                <img src="~/Content/img/CalinoiuAlexandru.png" class="team-img" alt="" />
+                <img src="~/Content/img/CalinoiuAlexandru.png" class="team-img" alt="personal-photo" />
                 <h4>Alexandru Calinoiu</h4>
                 <span class="job-name">Co-Founder & Project Manager</span>
                 <div>
@@ -38,12 +38,12 @@
                     <a href="http://www.linkedin.com/in/alexandrucalinoiu" target="_blank" class="linkedin-icon" title="linkedin"></a>
                     <a href="https://twitter.com/CalinBalauru" target="_blank" class="twitter-icon" title="twitter"></a>
                 </div>
-                <p>I've been programming since the age of 12 started with a <a href="http://ro.wikipedia.org/wiki/HC#HC_85" target="_blank">HC 85</a> and a tape recorder to load <a href="http://en.wikipedia.org/wiki/BASIC" target="_blank" class="href">Basic</a> games</p>
-                <p>Since then in the last 8 years I've worked on a couple of national and international companies and in 2010 I've founded my own outsourcing studio.</p>
+                <p>I've been programming since the age of 12 starting with a <a href="http://www.old-computers.com/museum/computer.asp?c=629" target="_blank">HC 85</a> and a tape recorder to load <a href="http://en.wikipedia.org/wiki/BASIC" target="_blank" class="href">Basic</a> games</p>
+                <p>Since then in the last 10 years I've worked in some national and international companies and in 2010 I've founded my own software studio.</p>
                 <p>Passionate about programming (duh!), violin, biking, rock climbing, meditation and a vegetarian wannabe.</p>
             </div>
             <div class="team-member first-row clearfix">
-                <img src="~/Content/img/NistorAdrian.png" class="team-img" alt="" />
+                <img src="~/Content/img/NistorAdrian.png" class="team-img" alt="personal-photo" />
                 <h4>Adrian Nistor</h4>
                 <span class="job-name">Co-Founder & Stuff</span>
                 <div>
@@ -51,46 +51,35 @@
                     <a href="http://ro.linkedin.com/in/nistoradrian" class="linkedin-icon" title="linkedin"></a>
                     <a href="#twitter" class="twitter-icon" title="twitter"></a>
                 </div>
-                <p>Since I was little I was fascinated with computers and I knew my life is going to revolve around them. Tried different (weird) jobs in my past: desktop publisher, IT specialist, embedded software engineer.</p>
+                <p>Since I was little I was fascinated with computers and I knew my life is going to revolve around them. I tried different (weird) jobs in my past: desktop publisher, IT specialist, embedded software engineer.</p>
                 <p>I gave up working in big corporations in 2010 when I co-founded AgileFreaks and don't regret it one bit.</p>
                 <p>I think of myself as an optimistic, quiet and self driven person that enjoys the simple things in life.</p>
             </div>
             <div class="team-member second-row clearfix">
-                <img src="~/Content/img/BadilaCristian.png" class="team-img" alt="" />
+                <img src="~/Content/img/BadilaCristian.png" class="team-img" alt="personal-photo" />
                 <h4>Cristi Badila</h4>
                 <span class="job-name">Programmer</span>
                 <div>
                     <a href="https://github.com/cristi-badila" target="_blank" class="git-icon" title="github"></a>
                     <a href="http://ro.linkedin.com/pub/cristian-badila/5a/125/630/" target="_blank" class="linkedin-icon" title="linkedin"></a>
                 </div>
-                <p>I am first and foremost a science/technology enthusiast and have been since I read my first science-fiction book, so when I got my first computer I instantly knew that I wanted to be a programmer (even though I didn't actually understood what it meant).</p>
-                <p>With that in mind I went on to take courses at schools specialized in teaching programming/technology and finally got to start working as a programmer in 2009.</p>
+                <p>I am first and foremost a science/technology enthusiast and have been since I read my first science-fiction book and as such, when I got my first computer I instantly knew that I wanted to be a programmer (even though I didn't actually understood what it meant).</p>
+                <p>With that in mind I went on to take courses at schools specialized in programming/technology and finally got to start working as a programmer in 2009.</p>
                 <p>After an initial first year in which I tried to find my place in bigger companies I realized that the best fit for me was a smaller but highly passionate team (Agile Freaks) where I've been working since 2011.</p>
             </div>
-            <div class="team-member second-row clearfix">
-                <img src="~/Content/img/IleanaTristiu.png" class="team-img" alt="" />
-                <h4>Ileana Tristiu</h4>
-                <span class="job-name">Programmer</span>
-                <div>
-                    <a href="https://github.com/ileanatristiu" target="_blank" class="git-icon" title="github"></a>
-                    <a href="http://www.linkedin.com/pub/ileana-tristiu/3b/13a/a8b" target="_blank" class="linkedin-icon" title="linkedin"></a>
-                </div>
-                <p>My first contact with the world of programmers was 10 years ago in high school and since then I have studied to specialize my skils in this area. I have started my professional career in December 2011 here, at Agile Freaks.</p>
-                <p>I love nature, music, ski and my job.</p>
-            </div>
             <div class="team-member third-row clearfix">
-                <img src="~/Content/img/DoruParvu.png" class="team-img" alt="" />
+                <img src="~/Content/img/DoruParvu.png" class="team-img" alt="personal-photo" />
                 <h4>Doru Pîrvu</h4>
                 <span class="job-name">Programmer</span>
                 <div>
                     <a href="https://github.com/pirvudoru" target="_blank" class="git-icon" title="github"></a>
                     <a href="https://twitter.com/dorupirvu" target="_blank" class="twitter-icon" title="twitter"></a>
                 </div>
-                <p>I am a passionate programmer and currently a 3rd year student Computer Science at "Lucian Blaga" University from Sibiu.</p>
+                <p>I am a passionate programmer and currently a graduate in Computer Science at "Lucian Blaga" University from Sibiu.</p>
                 <p>Mostly interested in web technologies and software architecture.</p>
             </div>
             <div class="team-member third-row clearfix">
-                <img src="~/Content/img/member00.png" class="team-img" alt="" />
+                <img src="~/Content/img/member00.png" class="team-img" alt="personal-photo" />
                 <h4>We want You!</h4>
                 <span class="job-name">Join the awesome Freaks Team</span>
                 <p>Think you have what it takes to be part of our team? Follow the link below to see available positions at Agile Freaks.</p>
