--- a/Agilefreaks/Views/Home/_Contact.cshtml
+++ b/Agilefreaks/Views/Home/_Contact.cshtml
@@ -36,10 +36,10 @@
                     <h4>Contact details</h4>
                     <div class="line-contact-details"></div>
                     <div class="details-item">
-                        <span>Office:</span>Str. Tg Vinului, nr. 9<br />
-                        Sibiu, Romania, 550191   
-                   
-                   
+                        <span>Office:</span>
+                        Str. Avram Iancu, nr. 1-3 ap 5
+                        <br />
+                        Sibiu, Romania, 550183
                     </div>
                     <div class="details-item">
                         <span>Phone:</span>+40 745 857479<br />
