[#17] fixes levelboy's github

--- a/Agilefreaks/Views/Home/_AboutUs.cshtml
+++ b/Agilefreaks/Views/Home/_AboutUs.cshtml
@@ -47,7 +47,7 @@
                 <h4>Adrian Nistor</h4>
                 <span class="job-name">Co-Founder & Stuff</span>
                 <div>
-                    <a href="https://github.com/levelboyt" target="_blank" class="git-icon" title="github"></a>
+                    <a href="https://github.com/levelboy" target="_blank" class="git-icon" title="github"></a>
                     <a href="http://ro.linkedin.com/in/nistoradrian" class="linkedin-icon" title="linkedin"></a>
                     <a href="#twitter" class="twitter-icon" title="twitter"></a>
                 </div>
