[#2] Added placeholder pictures and text

--- a/Agilefreaks/Views/Home/_AboutUs.cshtml
+++ b/Agilefreaks/Views/Home/_AboutUs.cshtml
@@ -67,7 +67,7 @@
                 <p>With that in mind I went on to take courses at schools specialized in programming/technology and finally got to start working as a programmer in 2009.</p>
                 <p>After an initial first year in which I tried to find my place in bigger companies I realized that the best fit for me was a smaller but highly passionate team (Agile Freaks) where I've been working since 2011.</p>
             </div>
-            <div class="team-member third-row clearfix">
+            <div class="team-member second-row clearfix">
                 <img src="~/Content/img/DoruParvu.png" class="team-img" alt="personal-photo" />
                 <h4>Doru Pîrvu</h4>
                 <span class="job-name">Programmer</span>
@@ -77,6 +77,27 @@
                 </div>
                 <p>I am a passionate programmer and currently a graduate in Computer Science at "Lucian Blaga" University from Sibiu.</p>
                 <p>Mostly interested in web technologies and software architecture.</p>
+            </div>
+            <div class="team-member third-row clearfix">
+                <img src="~/Content/img/CazacuTudor.png" class="team-img" alt="personal-photo" />
+                <h4>Cazacu Tudor</h4>
+                <span class="job-name">Programmer</span>
+                <div>
+                    <a href="https://github.com/cazacutudor" target="_blank" class="git-icon" title="github"></a>
+                </div>
+                <p>Quote pending.</p>
+                <p>Quote pending.</p>
+            </div>
+            <div class="team-member third-row clearfix">
+                <img src="~/Content/img/IftodeMihai.png" class="team-img" alt="personal-photo" />
+                <h4>Iftode Mihai-Flavius</h4>
+                <span class="job-name">Programmer</span>
+                <div>
+                    <a href="https://github.com/mihaiiftode" target="_blank" class="git-icon" title="github"></a>
+                    <a href="https://www.linkedin.com/in/mihai-flavius-iftode-18249a129/" target="_blank" class="linkedin-icon" title="linkedin"></a>
+                </div>
+                <p>Quote pending.</p>
+                <p>Quote pending.</p>
             </div>
             <div class="team-member third-row clearfix">
                 <img src="~/Content/img/member00.png" class="team-img" alt="personal-photo" />
