--- a/Agilefreaks/Views/Home/_Testimonials.cshtml
+++ b/Agilefreaks/Views/Home/_Testimonials.cshtml
@@ -29,7 +29,8 @@
                     Calin and and his team are a pleasure to work with.
                     They went above what was required and delivered very solid solutions.
                     We were dealing with some legacy code that needed a lot of care and consideration, not to mention, patience.
-                    His knowledge of Ruby and Rails are exceptional. I can highly recommend Calin and his team. <span class="name">- Bobby Wallace, Chief Architect at Krossover -</span>
+                    His knowledge of Ruby and Rails are exceptional. I can highly recommend Calin and his team. 
+                    <span class="name">- Bobby Wallace, Chief Architect at Krossover -</span>
                 </p>
             </li>
             <li>
