--- a/Agilefreaks/Views/Home/_Testimonials.cshtml
+++ b/Agilefreaks/Views/Home/_Testimonials.cshtml
@@ -1,20 +1,50 @@
 ﻿<section class="testimonials">
     <div class="container">
         <div class="left-quote">
-            <img src="~/Content/img/left-quote.png" alt="quote" />
+            <img src="~/Content/img/left-quote.png" alt="quote"/>
         </div>
         <ul class="testimonials-slider">
             <li>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut  nostrud  laboris ex ea commodo consequat.<span class="name">- John Doe, CEO -</span>
+                Alex and his team are simply excellent. Hard working, diligent, and extremely knowledgeable.
+                Agile Freaks went above and beyond to deliver on time and to budget on a very complicated project.
+                I wouldn't hesitate to work with him again.
+                <span class="name">- Stephen C Sheppard, Founder Social Artisan Limited -</span>
                 <p>
             </li>
             <li>
-                <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo..<span class="name">- Doe John, CTO -</span></p>
+                <p>
+                    Calin is able to interpret high level requirements and produce appropriate software implementations with minimal additional input.
+                    His work ethic and pro-active manner of progressing the project make it easy for me to recommend him without qualification to others.
+                    <span class="name">- Patrick Mackinlay, Principal Consultant at TecSurge Pte Ltd -</span>
+                </p>
+            </li>
+            <li>
+                <p>
+                    Agile development GOD! <span class="name">- Ciprian Borcescu, Project Manager la OkapiStudio -</span>
+                </p>
+            </li>
+            <li>
+                <p>
+                    Calin and and his team are a pleasure to work with.
+                    They went above what was required and delivered very solid solutions.
+                    We were dealing with some legacy code that needed a lot of care and consideration, not to mention, patience.
+                    His knowledge of Ruby and Rails are exceptional. I can highly recommend Calin and his team. 
+                    <span class="name">- Bobby Wallace, Chief Architect at Krossover -</span>
+                </p>
+            </li>
+            <li>
+                <p>
+                    I've worked with Alex on a number of application development projects and would recommend his work to anyone looking for an excellent developer and team manager.
+                    His technical skills are first-rate, and I've learned a lot from him over the course of our projects.
+                    He is dependable and provides high quality application code.
+                    Working with him and his team is a pleasure.
+                    <span class="name">- Michael Zucker, Chief Operations Officer at Acrowire -</span>
+                </p>
             </li>
         </ul>
         <div class="right-quote">
-            <img src="~/Content/img/right-quote.png" alt="quote" />
+            <img src="~/Content/img/right-quote.png" alt="quote"/>
         </div>
     </div>
 </section>
