--- a/Agilefreaks/Views/Home/_Features.cshtml
+++ b/Agilefreaks/Views/Home/_Features.cshtml
@@ -3,8 +3,8 @@
     <div class="features-wrap">
         <div class="container clearfix">
             <ul class="features-tabs " id="featuresTab">
-                <li class="active"><a href="#customer-features">Customer Features</a></li>
-                <li><a href="#employees-features">Employees Features</a></li>
+                <li class="active"><a href="#customer-features">Want to hire us?</a></li>
+                <li><a href="#employees-features">Want to work with us?</a></li>
             </ul>
             <div class="tab-content">
                 <!-- Customer Features Content -->
