[#24] Change contact address

--- a/Agilefreaks/Views/Home/_Contact.cshtml
+++ b/Agilefreaks/Views/Home/_Contact.cshtml
@@ -37,9 +37,9 @@
                     <div class="line-contact-details"></div>
                     <div class="details-item">
                         <span>Office:</span>
-                        Str. Avram Iancu, nr. 1-3 ap 5
+                        Str. Nicolae Balcescu, nr. 6, ap. 114
                         <br />
-                        Sibiu, Romania, 550183
+                        Sibiu, Romania, 550159
                     </div>
                     <div class="details-item">
                         <span>Phone:</span>+40 745 857479<br />
