--- a/Agilefreaks/Views/Shared/_Layout.cshtml
+++ b/Agilefreaks/Views/Shared/_Layout.cshtml
@@ -38,10 +38,10 @@
             "email" : "office@agilefreaks.com",
             "address" : {
                 "@@type" : "PostalAddress",
-                "streetAddress" : "Str. Avram Iancu, nr. 1-3 ap 5",
+                "streetAddress" : "Str. Nicolae Balcescu, nr. 6, ap. 114",
                 "addressLocality" : "Sibiu",
                 "addressCountry" : "Romania",
-                "postalCode" : "550183"
+                "postalCode" : "550159"
             },
                 "review" : {
                     "@@type" : "Review",
